@@ -33,6 +33,8 @@ HISTORY
     - one bug preventing language selection saving on installation was fixed
     - menu icons were added for Vista and more recent Windows editions;
       they can be enabled/disabled through the show_menu_icons GUI option
+    - one bug in GUI cluster map draw was fixed
+    - two bugs in disk optimization algorithm were fixed
 
 
   Version 5.0.2  2012-01-31
